--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
           sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
   </iframe>
 
-  <a href="https://discord.gg/abc123" target="_blank" class="invite-button">
+  <a href="https://discord.gg/H8we26BpMF" target="_blank" class="invite-button">
     Rejoindre le serveur Discord
   </a>
 
 </body>
 </html>
+
